[package]
name = "file_upload"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>", "J Wylie Cullick <wylie@terebinth.is>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
log = "0.4"
web_logger = "0.2"
yew = {version = "0.17.3", features = ['web_sys']}
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "ErrorEvent",
  "WebSocket",
  "MessageEvent",
]